--- a/themes/origins/styles/products-by-collection.scss
+++ b/themes/origins/styles/products-by-collection.scss
@@ -26,11 +26,3 @@
     }
   }
 }
-
-@include breakpoint("lg") {
-  .products-by-collection {
-    .grid {
-      grid-template-columns: 1fr;
-    }
-  }
-}
